Your first AI - Updated

--- a/Your first AI/Your first AI.ipynb
+++ b/Your first AI/Your first AI.ipynb
@@ -38,8 +38,8 @@
     "activations of the output layer sums to 1) and the number of nodes in the output layer = number of \n",
     "different possible labels or class which for this case is 10. This means that you can interpret the \n",
     "activation of the j-th node in the output layer as the probability that the input belongs to the \n",
-    "j-th class or has the j-th label. If you think about the cost function, you'll understand that we should \n",
-    "convert our rudimentary labels into probability vectors too. So an image depicting 2 should have the label \n",
+    "j-th class or has the j-th label. If you think about the cost function, you'll understand that we \n",
+    "should convert our rudimentary labels into probability vectors too. So an image depicting 2 should have the label \n",
     "(0,0,1,0,...,0).\n",
     "\"\"\"\n",
     "\n",
