Your first AI - Update1

--- a/Your first AI/Your first AI.ipynb
+++ b/Your first AI/Your first AI.ipynb
@@ -35,12 +35,12 @@
     "can be fed to the input layer of the neural net. But is that all the network is hungry for? No.\n",
     "It also requires a label for the image, in this case 0 or 1 or ... or 9. But the output layer of a \n",
     "neural net is often a probability distribution (meaning the sum of all the node-values or the \n",
-    "activations of the output layer sums to 1) and the number of nodes in the output layer = number of \n",
+    "activations of the output layer is 1) and the number of nodes in the output layer = number of \n",
     "different possible labels or class which for this case is 10. This means that you can interpret the \n",
     "activation of the j-th node in the output layer as the probability that the input belongs to the \n",
     "j-th class or has the j-th label. If you think about the cost function, you'll understand that we \n",
-    "should convert our rudimentary labels into probability vectors too. So an image depicting 2 should have the label \n",
-    "(0,0,1,0,...,0).\n",
+    "should convert our rudimentary labels into probability vectors too. So an image depicting 2 should \n",
+    "have the label (0,0,1,0,...,0).\n",
     "\"\"\"\n",
     "\n",
     "\"\"\"\n",
