--- a/Your first AI/Your first AI.ipynb
+++ b/Your first AI/Your first AI.ipynb
@@ -17,18 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import the dataset \n",
+    "import numpy as np\n",
     "from keras.datasets import mnist# <--- My contribution to our little AI\n",
     "(trainX, trainy), (testX, testy) = mnist.load_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,25 +70,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "train=Data(trainX,trainy)\n",
     "test=Data(testX,testy)\n",
     "digits=Dataset(train,test)\n",
     "# to import train features: digits.train.features\n",
-    "# to import train features: digits.train.labels"
+    "# to import train features: digits.train.labels\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "60000/60000 [==============================] - 1s 25us/step - loss: 0.1578 - accuracy: 0.2036\n",
+      "Epoch 2/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.1347 - accuracy: 0.3174\n",
+      "Epoch 3/50\n",
+      "60000/60000 [==============================] - 1s 23us/step - loss: 0.1221 - accuracy: 0.3819\n",
+      "Epoch 4/50\n",
+      "60000/60000 [==============================] - 1s 23us/step - loss: 0.1161 - accuracy: 0.4125\n",
+      "Epoch 5/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.1122 - accuracy: 0.4324\n",
+      "Epoch 6/50\n",
+      "60000/60000 [==============================] - 1s 25us/step - loss: 0.1083 - accuracy: 0.4523\n",
+      "Epoch 7/50\n",
+      "60000/60000 [==============================] - 2s 26us/step - loss: 0.0971 - accuracy: 0.5080\n",
+      "Epoch 8/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.0890 - accuracy: 0.5486\n",
+      "Epoch 9/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.0844 - accuracy: 0.5723\n",
+      "Epoch 10/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.0814 - accuracy: 0.5877\n",
+      "Epoch 11/50\n",
+      "60000/60000 [==============================] - 1s 25us/step - loss: 0.0795 - accuracy: 0.5971\n",
+      "Epoch 12/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.0778 - accuracy: 0.6065\n",
+      "Epoch 13/50\n",
+      "60000/60000 [==============================] - 2s 29us/step - loss: 0.0766 - accuracy: 0.6126\n",
+      "Epoch 14/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.0747 - accuracy: 0.6218\n",
+      "Epoch 15/50\n",
+      "60000/60000 [==============================] - 1s 25us/step - loss: 0.0719 - accuracy: 0.6356\n",
+      "Epoch 16/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.0684 - accuracy: 0.6533\n",
+      "Epoch 17/50\n",
+      "60000/60000 [==============================] - 2s 28us/step - loss: 0.0655 - accuracy: 0.6679\n",
+      "Epoch 18/50\n",
+      "60000/60000 [==============================] - 2s 26us/step - loss: 0.0633 - accuracy: 0.6792\n",
+      "Epoch 19/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.0617 - accuracy: 0.6876\n",
+      "Epoch 20/50\n",
+      "60000/60000 [==============================] - 2s 26us/step - loss: 0.0604 - accuracy: 0.6937\n",
+      "Epoch 21/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.0594 - accuracy: 0.6992\n",
+      "Epoch 22/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.0584 - accuracy: 0.7041\n",
+      "Epoch 23/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.0578 - accuracy: 0.7079\n",
+      "Epoch 24/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.0573 - accuracy: 0.7102\n",
+      "Epoch 25/50\n",
+      "60000/60000 [==============================] - 2s 28us/step - loss: 0.0567 - accuracy: 0.7128\n",
+      "Epoch 26/50\n",
+      "60000/60000 [==============================] - 1s 24us/step - loss: 0.0563 - accuracy: 0.7154\n",
+      "Epoch 27/50\n",
+      "60000/60000 [==============================] - 2s 25us/step - loss: 0.0559 - accuracy: 0.7172\n",
+      "Epoch 28/50\n",
+      "60000/60000 [==============================] - 2s 26us/step - loss: 0.0556 - accuracy: 0.7185\n",
+      "Epoch 29/50\n",
+      "60000/60000 [==============================] - 2s 29us/step - loss: 0.0553 - accuracy: 0.7200\n",
+      "Epoch 30/50\n",
+      "60000/60000 [==============================] - 2s 27us/step - loss: 0.0549 - accuracy: 0.7222\n",
+      "Epoch 31/50\n",
+      "60000/60000 [==============================] - 2s 27us/step - loss: 0.0546 - accuracy: 0.7238\n",
+      "Epoch 32/50\n",
+      "60000/60000 [==============================] - 2s 27us/step - loss: 0.0543 - accuracy: 0.7253\n",
+      "Epoch 33/50\n",
+      "60000/60000 [==============================] - 2s 31us/step - loss: 0.0540 - accuracy: 0.7267\n",
+      "Epoch 34/50\n",
+      "60000/60000 [==============================] - 2s 26us/step - loss: 0.0538 - accuracy: 0.7276\n",
+      "Epoch 35/50\n",
+      "60000/60000 [==============================] - 2s 27us/step - loss: 0.0536 - accuracy: 0.7290\n",
+      "Epoch 36/50\n",
+      "60000/60000 [==============================] - 2s 30us/step - loss: 0.0533 - accuracy: 0.7301\n",
+      "Epoch 37/50\n",
+      "60000/60000 [==============================] - 2s 29us/step - loss: 0.0531 - accuracy: 0.7313\n",
+      "Epoch 38/50\n",
+      "60000/60000 [==============================] - 2s 29us/step - loss: 0.0529 - accuracy: 0.7325\n",
+      "Epoch 39/50\n",
+      "60000/60000 [==============================] - 2s 27us/step - loss: 0.0528 - accuracy: 0.7329\n",
+      "Epoch 40/50\n",
+      "60000/60000 [==============================] - 2s 28us/step - loss: 0.0525 - accuracy: 0.7344\n",
+      "Epoch 41/50\n",
+      "60000/60000 [==============================] - 2s 28us/step - loss: 0.0524 - accuracy: 0.7350\n",
+      "Epoch 42/50\n",
+      "60000/60000 [==============================] - 2s 28us/step - loss: 0.0523 - accuracy: 0.7356\n",
+      "Epoch 43/50\n",
+      "60000/60000 [==============================] - 2s 28us/step - loss: 0.0521 - accuracy: 0.7363\n",
+      "Epoch 44/50\n",
+      "60000/60000 [==============================] - 2s 28us/step - loss: 0.0520 - accuracy: 0.7371\n",
+      "Epoch 45/50\n",
+      "60000/60000 [==============================] - 2s 28us/step - loss: 0.0519 - accuracy: 0.7375\n",
+      "Epoch 46/50\n",
+      "60000/60000 [==============================] - 2s 28us/step - loss: 0.0518 - accuracy: 0.7378\n",
+      "Epoch 47/50\n",
+      "60000/60000 [==============================] - 2s 28us/step - loss: 0.0517 - accuracy: 0.7383\n",
+      "Epoch 48/50\n",
+      "60000/60000 [==============================] - 2s 28us/step - loss: 0.0516 - accuracy: 0.7386\n",
+      "Epoch 49/50\n",
+      "60000/60000 [==============================] - 2s 29us/step - loss: 0.0515 - accuracy: 0.7390\n",
+      "Epoch 50/50\n",
+      "60000/60000 [==============================] - 2s 28us/step - loss: 0.0515 - accuracy: 0.7391\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nThe set of codes here achieve the following tasks:\\n1. Create a Sequential object and name it model.\\n2. Add input, hidden and output layers to it with proper activation functions.\\n3. Make sure the activation function for the output layer is softmax, otherwise \\nwe won't get a probability vector as the output! \\n4. Compile the model i.e. choose a loss function and optimizer for our neural net.\\n5. Learn from the training samples using model.fit with a proper number of epochs \\nand batch_size and store the result in an object named learning_history.\\n\""
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense\n",
+    "from keras.layers import Flatten,Dense,Activation\n",
     "# Step - 2: Design the network (To be done by member 2)\n",
     "\"\"\"\n",
     "The feature and label vectors have already determined the number of nodes in the input, output layers.\n",
@@ -108,9 +227,7 @@
     "\n",
     "#The Hidden Layers:relu is rectified linear(look up wikipedia)\n",
     "model.add(Dense(512,activation='relu'))\n",
-    "model.add(Dense(256,activation='relu')) \n",
-    "model.add(Dense(128,activation='relu'))    \n",
-    "model.add(Dense(64,activation='relu'))\n",
+    "model.add(Dense(256,activation='relu'))    \n",
     "\n",
     "#Output layer must have 'softmax' activation(look up wikipedia)as we want probabilities in the output layer.\n",
     "model.add(Dense(10,activation='softmax'))\n",
@@ -120,15 +237,10 @@
     "model.compile(loss='mean_squared_error',optimizer='sgd',metrics=['accuracy'])\n",
     "\n",
     "#Now train the data on the training Data Set and evlaute on test Data set\n",
-    "learning_history=model.fit(digits.train.features,train.labels,batch_size=1000,epochs=100,shuffle=True)\n",
-    "\n",
-    "print(learning_history.history)\n",
-    "score,acc=model.evaluate(digits.test.features,digits.test.labels,batch_size=100)\n",
-    "print('Test score:',score)\n",
-    "print('Test Accuracy:',acc)\n",
+    "learning_history=model.fit(digits.train.features,train.labels,batch_size=1000,epochs=50,shuffle=True)\n",
     "\n",
     "# Saving the model\n",
-    "model.save('knowledge.h5')\n",
+    "#model.save('knowledge.h5')\n",
     "\n",
     "# If one wants to delete the current model in memory\n",
     "#del model\n",
@@ -143,6 +255,38 @@
     "5. Learn from the training samples using model.fit with a proper number of epochs \n",
     "and batch_size and store the result in an object named learning_history.\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(learning_history.history)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000/10000 [==============================] - 0s 25us/step\n",
+      "60000/60000 [==============================] - 1s 20us/step\n",
+      "Train score: 0.05147945399085681 Test Score: 0.05224775731563568\n",
+      "Train Accuracy: 0.7390999794006348 Test Accuracy: 0.7354999780654907\n"
+     ]
+    }
+   ],
+   "source": [
+    "score_test,acc_test=model.evaluate(digits.test.features,digits.test.labels,batch_size=100)\n",
+    "score_train,acc_train=model.evaluate(digits.train.features,digits.train.labels,batch_size=100)\n",
+    "print('Train score:',score_train,'Test Score:',score_test)\n",
+    "print('Train Accuracy:',acc_train,'Test Accuracy:',acc_test)"
    ]
   },
   {
