--- a/Your first AI/Your first AI-CNN.ipynb
+++ b/Your first AI/Your first AI-CNN.ipynb
@@ -89,12 +89,12 @@
     "test=Data(testX,testy)\n",
     "digits=Dataset(train,test)\n",
     "# to import train features: digits.train.features\n",
-    "# to import train features: digits.train.labels\n"
+    "# to import train features: digits.train.labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,25 +103,26 @@
      "text": [
       "Train on 54000 samples, validate on 6000 samples\n",
       "Epoch 1/10\n",
-      "54000/54000 [==============================] - 16s 293us/step - loss: 0.3388 - accuracy: 0.8966 - val_loss: 0.1465 - val_accuracy: 0.9608\n",
+      "54000/54000 [==============================] - 8s 142us/step - loss: 0.3295 - accuracy: 0.9025 - val_loss: 0.1472 - val_accuracy: 0.9585\n",
       "Epoch 2/10\n",
-      "54000/54000 [==============================] - 13s 235us/step - loss: 0.1535 - accuracy: 0.9551 - val_loss: 0.0996 - val_accuracy: 0.9742\n",
+      "54000/54000 [==============================] - 8s 142us/step - loss: 0.1513 - accuracy: 0.9562 - val_loss: 0.1036 - val_accuracy: 0.9713\n",
       "Epoch 3/10\n",
-      "54000/54000 [==============================] - 14s 258us/step - loss: 0.1082 - accuracy: 0.9683 - val_loss: 0.0844 - val_accuracy: 0.9782\n",
+      "54000/54000 [==============================] - 8s 149us/step - loss: 0.1041 - accuracy: 0.9697 - val_loss: 0.0944 - val_accuracy: 0.9737\n",
       "Epoch 4/10\n",
-      "54000/54000 [==============================] - 13s 243us/step - loss: 0.0845 - accuracy: 0.9753 - val_loss: 0.0670 - val_accuracy: 0.9823\n",
+      "54000/54000 [==============================] - 9s 170us/step - loss: 0.0806 - accuracy: 0.9770 - val_loss: 0.0716 - val_accuracy: 0.9798\n",
       "Epoch 5/10\n",
-      "54000/54000 [==============================] - 16s 287us/step - loss: 0.0683 - accuracy: 0.9796 - val_loss: 0.0648 - val_accuracy: 0.9825\n",
+      "54000/54000 [==============================] - 10s 194us/step - loss: 0.0660 - accuracy: 0.9811 - val_loss: 0.0629 - val_accuracy: 0.9828\n",
       "Epoch 6/10\n",
-      "54000/54000 [==============================] - 20s 364us/step - loss: 0.0579 - accuracy: 0.9829 - val_loss: 0.0664 - val_accuracy: 0.9827\n",
+      "54000/54000 [==============================] - 11s 198us/step - loss: 0.0556 - accuracy: 0.9840 - val_loss: 0.0605 - val_accuracy: 0.9838\n",
       "Epoch 7/10\n",
-      "54000/54000 [==============================] - 24s 445us/step - loss: 0.0491 - accuracy: 0.9857 - val_loss: 0.0642 - val_accuracy: 0.9817\n",
+      "54000/54000 [==============================] - 9s 172us/step - loss: 0.0495 - accuracy: 0.9857 - val_loss: 0.0563 - val_accuracy: 0.9842\n",
       "Epoch 8/10\n",
-      "54000/54000 [==============================] - 23s 420us/step - loss: 0.0431 - accuracy: 0.9875 - val_loss: 0.0553 - val_accuracy: 0.9857\n",
+      "54000/54000 [==============================] - 10s 186us/step - loss: 0.0438 - accuracy: 0.9869 - val_loss: 0.0545 - val_accuracy: 0.9868\n",
       "Epoch 9/10\n",
-      "54000/54000 [==============================] - 20s 364us/step - loss: 0.0377 - accuracy: 0.9895 - val_loss: 0.0600 - val_accuracy: 0.9840\n",
+      "54000/54000 [==============================] - 10s 185us/step - loss: 0.0390 - accuracy: 0.9889 - val_loss: 0.0581 - val_accuracy: 0.9852\n",
       "Epoch 10/10\n",
-      "54000/54000 [==============================] - 20s 372us/step - loss: 0.0335 - accuracy: 0.9904 - val_loss: 0.0496 - val_accuracy: 0.9867\n"
+      "54000/54000 [==============================] - 10s 182us/step - loss: 0.0346 - accuracy: 0.9902 - val_loss: 0.0565 - val_accuracy: 0.9847\n",
+      "93.18587350845337\n"
      ]
     }
    ],
@@ -130,8 +131,8 @@
     "from keras.layers import Flatten,Dense,Activation, Conv2D, MaxPooling2D\n",
     "from keras.optimizers import SGD\n",
     "# Step - 2: Design the network (To be done by member 2)\n",
-    "\n",
-    "\n",
+    "import time\n",
+    "start=time.time()\n",
     "model = Sequential()\n",
     "model.add(Conv2D(32, (3, 3), activation='relu', kernel_initializer='he_uniform', input_shape=(28, 28, 1)))\n",
     "model.add(MaxPooling2D((2, 2)))\n",
@@ -150,7 +151,9 @@
     "\n",
     "# If one wants to delete the current model in memory\n",
     "#del model\n",
-    "\n"
+    "\n",
+    "end=time.time()\n",
+    "print(end-start)"
    ]
   },
   {
